Добавление плагина загрузки жесткого дсика в фабрику

--- a/cmd/appsettings.json
+++ b/cmd/appsettings.json
@@ -3,6 +3,10 @@
         {
             "name": "VersionPlugin",
             "params": []
+        },
+        {
+            "name": "HardDriveFreeSpacePlugin",
+            "params": []
         }
     ]
 }
