--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
-    "module": "CommonJS",
-    "strict": true,
+    "target": "ES6",
+    "module": "ES6",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "outDir": "templates",
-    "rootDir": "src"
-  }
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "outDir": "./dist"
+  },
+  "include": ["src/**/*"]
 }
-
