--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.31.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "lint-staged": "^11.1.2",
+    "prettier": "^2.3.2",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.8.3",
@@ -9,7 +15,9 @@
   },
   "scripts": {
     "build": "tsc",
-    "bundle": "webpack"
+    "bundle": "webpack",
+    "lint": "eslint ./src/**",
+    "lint:fix": "eslint ./src/** --fix --color"
   },
   "dependencies": {
     "gridstack": "^11.5.1"
